# challenges

./: .gitmodules
aoc/2020/: LICENSE  aoc2020.cabal  cookie  solve1.py  template.hsfiles
aoc/2020/input/: 03
aoc/2020/src/: 02.hs  03.hs  Main.hs  Solutions.hs  aoc022.hs
aoc/2024/: Cargo.toml
aoc/2024/00/: Cargo.toml
aoc/2024/00/src/: main.rs
aoc/2024/02/: Cargo.toml
aoc/2024/day01/: Cargo.toml
aoc/2024/day01/src/: main.rs
aoc/2024/day02/: input
aoc/2024/day02/src/: main.rs
aoc/2024/day03/: Cargo.toml
aoc/2024/day03/src/: main.rs
aoc/2024/day04/: Cargo.toml
aoc/2024/day04/src/: main.rs
aoc/2024/day05/: Cargo.toml  input
aoc/2024/day05/src/: main.rs
aoc/2024/day06/: Cargo.toml  input
aoc/2024/day06/src/: main.rs
aoc/2024/day07/: Cargo.toml
aoc/2024/day07/src/: main.rs
aoc/2024/day08/: Cargo.toml  input
aoc/2024/day08/src/: main.rs
aoc/2024/day09/: Cargo.toml  input
aoc/2024/day09/src/: main.rs
aoc/2024/day10/: Cargo.toml  input
aoc/2024/day10/src/: main.rs
aoc/2024/day11/: Cargo.toml  input
aoc/2024/day11/src/: main.rs
aoc/2024/day12/: Cargo.toml  input
aoc/2024/day12/src/: main.rs
aoc/2024/day13/: Cargo.toml
aoc/2024/day14/: Cargo.toml  input
aoc/2024/day15/: Cargo.toml  input
aoc/2024/day16/: Cargo.toml  input
aoc/2024/day17/: Cargo.toml  input  reverse
aoc/2024/day18/: Cargo.toml  input
aoc/2024/day19/: Cargo.toml  input
aoc/2024/day20/: Cargo.toml  input
aoc/2024/day21/: Cargo.toml
aoc/2024/day22/: Cargo.toml  input
aoc/2024/day23/: Cargo.toml  input
aoc/2024/utils/: Cargo.toml
(+318 files in other folders)
